Experimental native c++ code for visualization